# playwright-python-mcp

./: .gitignore  README.md  UPSTREAM.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/playwright_python_mcp/: __init__.py  cli.py
src/playwright_python_mcp/backend/: __init__.py  browser_backend.py  codegen.py  context.py  extension_relay.py  locator_generator.py  locator_parser.py  log_file.py  response.py  selector_parser.py  session.py  session_log.py  tab.py  tool.py  utils.py
src/playwright_python_mcp/backend/tools/: __init__.py  common.py  config.py  console.py  cookies.py  devtools.py  dialogs.py  evaluate.py  files.py  find.py  form.py  keyboard.py  metadata.py  mouse.py  navigate.py  network.py  pdf.py  route.py  run_code.py  screenshot.py  snapshot.py  storage.py  tabs.py  tracing.py  verify.py  video.py  wait.py  webstorage.py
src/playwright_python_mcp/mcp/: __init__.py  config.py  server.py
src/playwright_python_mcp/tools/: __init__.py  registry.py
tests/: test_browser_lifecycle.py  test_cli.py  test_config_resolver.py  test_devtools_resume.py  test_extension_relay.py  test_locator_generator.py  test_locator_parser.py  test_response_images.py  test_run_code.py  test_server_registration.py
tests/conformance/upstream/: package-lock.json  package.json  playwright.config.ts  sync_upstream_tests.py  tsconfig.json
tests/conformance/upstream/fixtures/: fixtures.ts
tests/conformance/upstream/fixtures/testserver/: index.ts
tests/conformance/upstream/specs/: capabilities.spec.ts  cdp.spec.ts  click.spec.ts  config.ini.spec.ts  config.spec.ts  console.spec.ts  cookies.spec.ts  core.spec.ts  devtools.spec.ts  dialogs.spec.ts  evaluate.spec.ts  files.spec.ts  form.spec.ts  http.spec.ts  mouse.spec.ts  network.spec.ts  pdf.spec.ts  route.spec.ts  run-code.spec.ts  screenshot.spec.ts  storage.spec.ts  tabs.spec.ts  tracing.spec.ts  type.spec.ts  verify.spec.ts  video.spec.ts  wait.spec.ts  webstorage.spec.ts
